--- a/public/views/admin.ejs
+++ b/public/views/admin.ejs
@@ -4,7 +4,7 @@
 
     <!-- Basic Page Needs
     ================================================== -->
-    <title>Realm Royale Hub</title>
+    <title>Realm Royale Statistics</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A place for everything realm royale!">
