--- a/public/views/mmr.ejs
+++ b/public/views/mmr.ejs
@@ -206,7 +206,7 @@
 
                                 <header class="widget-game-result__header widget-game-result__header--alt widget-game-result__header--alt-compact mb-4">
                                     <h3 class="widget-game-result__title" style="font-size: 0.9rem">Platform: <%=playerStats['platform']%></h3>
-                                    <time class="widget-game-result__date" style="font-size: 0.9rem">Player ID: <%=playerStats['id']%>
+                                    <time class="widget-game-result__date" style="font-size: 0.9rem">Player ID: <%=playerStats['player_id']%>
                                     </time>
                                 </header>
 
