--- a/public/views/orgLeague.ejs
+++ b/public/views/orgLeague.ejs
@@ -49,7 +49,7 @@
         var form = document.getElementById("search");
 
         function handleForm(event) {
-            event.preventDefault();
+            // event.preventDefault();
         }
 
         form.addEventListener('submit', handleForm);
