--- a/public/views/stats.ejs
+++ b/public/views/stats.ejs
@@ -84,7 +84,7 @@ let queueValues = {
     474: 'Solo\'s',
     475: 'Trio\'s', // who cares about consistency right realm? should be duo kekw thanks reforged
     476: 'Squad\'s',
-    477: 'War\'s',
+    477: 'Realm War\'s',
     480: 'Solo\'s Low LvL',
     481: 'Squad\'s Mid LvL',
     482: 'Duo\'s',
@@ -399,9 +399,6 @@ let classValues = {
                                     Placement
                                 </th>
                                                                                                                     <th class="team-result__placement" style="text-align: center;max-width: 90px;font-size: 18px">
-                                    Time Alive
-                                </th>
-                                                                                                                    <th class="team-result__placement" style="text-align: center;max-width: 90px;font-size: 18px">
                                     Kills
                                 </th>
                                                                                                                     <th class="team-result__placement" style="text-align: center;max-width: 90px;font-size: 18px">
@@ -452,9 +449,6 @@ let classValues = {
                                     </td>
                                                                                                                                     <td class="team-result__kills team-color--2" style="max-width: 90px;font-size: 16px">
                                         <%= playerLastFifty[game]['placement'] %>
-                                    </td>
-                                                                                                                                    <td class="team-result__kills team-color--2" style="max-width: 90px;font-size: 16px">
-                                        <%= playerLastFifty[game]['duration_secs'] %>
                                     </td>
                                                                                                                                     <td class="team-result__kills team-color--2" style="max-width: 90px;font-size: 16px">
                                         <%= playerLastFifty[game]['kills_player'] %>
